# mri2fem-multicompartment

./: .gitignore  Dockerfile  LICENSE  Multi-Compartment.ipynb  Multicompartment Chapter.ipynb  README.md  Snakefile  boundary.py  diffusion_model.py  env.yml  environment.yml  environment_base.yml  fenics2mri.py  fenicsstorage.py  interpolator.py  meshprocessing.py  mri2fenics.py  multicompartment.yml  multicompartment_to_macro.py  multidiffusion_model.py  pyproject.toml  setup.py  snakeconfig.yaml  utils.py
data/: concentration_0.mgz  injection_time.txt  mask.mgz  timestamps.txt
data/concentrations/: 20230213_073508.mgz  20230213_143049.mgz  20230214_094033.mgz  20230215_101347.mgz  20230216_080616.mgz
data/surfaces/: ventricles.stl
multidiffusion/: boundary.py  diffusion_model.py  fenicsstorage.py  mri2fenics.py  multidiffusion_model.py
scripts/: artificial_boundary_plots.py  fenics2mri.py  mesh_generation.py  mesh_quality.py  mri2fenics.py  mri_concentration_images.py  param_variation_plotter.py  region_quantities.py  simulation_runner.py  single_param_variation_plotter.py  singlecomp_wrapper.py  solute_quantification.py  test_subprocess.py  testscript.py  variation_transfer_boundary_parameter_plotter.py
src/twocomp/: diffusion.py  interpolator.py  multidiffusion.py  overlay_mri_image.py  param_utils.py  parameters.py  utils.py
src/twocomp_legacy/: diffusion_model.py  interpolator.py  meshprocessing.py  mri2fenics.py  multidiffusion_model.py
test/: test_multidiffusion.py  test_parameter_iterators.py
